# swimming-pool-mgt

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pools.json
.opencode/skills/frontend-design/: SKILL.md
.opencode/skills/python-engineer/: LICENSE.txt  SKILL.md  prompt.md
.opencode/skills/python-engineer/examples/: README.md  config.py  database.py  fastapi_app.py  models.py  test_example.py
.opencode/skills/python-engineer/references/: async-patterns.md  project-structure.md  testing-best-practices.md  type-hints.md  web-frameworks.md
.opencode/skills/self-learning/scripts/: analyze_traces.py  apply_adaptation.py
.tmp/learning/insights/: python_refactoring.md
.tmp/learning/traces/: python_refactor_20260408.md
backend/: Dockerfile.test  api.py  config.py  db.py  device.py  logging_config.py  main.py  pool_status.py  pyproject.toml  requirements.txt  scheduler.py  schema.py  status.py  utils.py  version.py
backend/tests/: conftest.py  test_db.py  test_device.py  test_pool_status.py  test_scheduler.py  test_schema.py  test_status.py
cicd/: build.sh  publish.sh  run.sh
docker/: Dockerfile.frontend  entrypoint.sh  nginx.frontend.conf
frontend/: app.js  config.json  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: PoolCard.jsx
